--- a/src/index.html
+++ b/src/index.html
@@ -77,11 +77,31 @@
                 <div class="adventages__items">
                     <img src="icons/2_monitor/shoe.png" alt="shose" class="adventages__icon">
                 <div class="adventages__header">Учим бегать</div>
-                <div class="adventages__descr">Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в Украине - <a href="#">Nice run club</a></div>
-            </div>
+                <div class="adventages__descr">Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в Украине - <a href="#">Nice run club</a>
+                </div>
             </div>
         </div>
+        </div>
     </div>
-
+    <div class="consultation">
+        <div class="container">
+            <h2 class="title title_left">
+                Получите бесплатную консультацию<br>
+                по подбору пульсометра
+            </h2>
+            <div class="consultation__descr">
+                Просто заполните форму заявки<br>
+                и мы перезвоним Вам в течении 10 минут
+            </div>
+            <form class="feed-form" action="#">
+                <input name="name" required placeholder="Ваше имя" type="text">
+                <input name="phone" required placeholder="Ваш телефон" type="number">
+                <input name="email" required placeholder="Ваше E-mail" type="email">
+                
+                <button class="button  button_submit">Заказать консультацию</button>
+                
+            </form>
+        </div>
+    </div>
 </body>
 </html>
